# openfst_glog_gflags_cmake

./: CMakeLists.txt  README.md  gflags.sh
patch/openfst/: CMakeLists.txt
patch/openfst/src/include/fst/: config.h
